tests/baselines/reference/nounusedTypeParameterConstraint.errors.txt
tests/cases/compiler/test.ts(1,10): error TS6133: 'IEventSourcedEntity' is declared but never used.


==== tests/cases/compiler/bar.ts (0 errors) ====
    
    export interface IEventSourcedEntity { }
    
==== tests/cases/compiler/test.ts (1 errors) ====
    import { IEventSourcedEntity } from "./bar";
             ~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'IEventSourcedEntity' is declared but never used.
    export type DomainEntityConstructor<TEntity extends IEventSourcedEntity> = { new(): TEntity; };